Sun Dec 14 00:06:46 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * java/jms/src/org/opendds/jms/BytesBodyFacade.java:
        * java/jms/src/org/opendds/jms/ConsumerDataReaderListener.java:
        * java/jms/src/org/opendds/jms/DataWriterPair.java:
        * java/jms/src/org/opendds/jms/DurableMessageConsumerImpl.java:
        * java/jms/src/org/opendds/jms/MapBodyFacade.java:
        * java/jms/src/org/opendds/jms/MessageConsumerImpl.java:
        * java/jms/src/org/opendds/jms/MessageDispatcher.java:
        * java/jms/src/org/opendds/jms/MessageProducerImpl.java:
        * java/jms/src/org/opendds/jms/MessagePropertiesFacade.java:
        * java/jms/src/org/opendds/jms/ObjectMessageImpl.java:
        * java/jms/src/org/opendds/jms/SessionImpl.java:
        * java/jms/src/org/opendds/jms/StreamBodyFacade.java:

          Completed remaining TODO items.

Sat Dec 13 23:47:04 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * java/jms/compat/build.xml:
        * java/jms/compat/test/org/opendds/jms/MessageConsumerImplTest.java:
        * java/jms/compat/test/org/opendds/jms/SessionImplTest.java:
        * java/jms/compat/test/org/opendds/jms/client/SimpleTest.java:
        * java/jms/src/org/opendds/jms/common/util/NativeLoader.java:
        * java/jms/compat/test/org/opendds/jms/AbstractMessageImplTest.java:

          Updated test suites.

        * java/jms/test/org/opendds/jms/SessionImplTest.java:
        * java/jms/test/org/opendds/jms/TestUtils.java:
        * java/jms/test/org/opendds/jms/TopicMessageConsumerImplTest.java:
        * java/jms/test/org/opendds/jms/TopicMessageProducerImplTest.java:

          Removed these files.

Sat Dec 13 21:36:33 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * java/jms/build.xml:

          Added missing TAO_ImR_Client library dependency.

        * java/jms/native/org_opendds_jms_DCPSInfoRepo.cpp:

          Updated code style.
