@@ -50,7 +50,7 @@ import org.opendds.jms.qos.DataReaderQosPolicy;
 import org.opendds.jms.qos.QosPolicies;
 
 /**
- * @author Weiqi Gao
+ * @author  Weiqi Gao
  * @version $Revision$
  */
 public class MessageConsumerImpl implements MessageConsumer {
