@@ -6,8 +6,8 @@ package org.opendds.jms.persistence;
 
 import java.util.Properties;
 
-import org.hibernate.cfg.Configuration;
 import org.hibernate.SessionFactory;
+import org.hibernate.cfg.Configuration;
 
 /**
  * @author  Steven Stallion
